    manual changes are present on the attribute.
    [ticket:1857]

  - Repaired the usage of merge() when used with 
    concrete inheriting mappers.  Such mappers frequently
    have so-called "concrete" attributes, which are
    subclass attributes that "disable" propagation from
    the parent - these needed to allow a merge()
    operation to pass through without effect.
    
- sql
  - Changed the scheme used to generate truncated
    "auto" index names when using the "index=True"
    flag on Column.   The truncation only takes
    place with the auto-generated name, not one
    that is user-defined (an error would be 
    raised instead), and the truncation scheme 
    itself is now based on a fragment of an md5
    hash of the identifier name, so that multiple
    indexes on columns with similar names still
    have unique names.  [ticket:1855]

  - The generated index name also is based on 
    a "max index name length" attribute which is
    separate from the "max identifier length" - 
    this to appease MySQL who has a max length
    of 64 for index names, separate from their
    overall max length of 255.  [ticket:1412]

- declarative
  - if @classproperty is used with a regular class-bound
    mapper property attribute, it will be called to get the
    actual attribute value during initialization. Currently,
    there's no advantage to using @classproperty on a column
    or relationship attribute of a declarative class that
    isn't a mixin - evaluation is at the same time as if
    @classproperty weren't used. But here we at least allow
    it to function as expected.
    
- mssql
  - Fixed "default schema" query to work with
    pymssql backend.

- examples
  - The beaker_caching example has been reorgnized
    such that the Session, cache manager, 
    declarative_base are part of environment, and
    custom cache code is portable and now within
    "caching_query.py".  This allows the example to 
    be easier to "drop in" to existing projects.